syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/proto";

message BackupRequest {
	// 是否需要压缩数据（zlib）
	bool compress = 1;
	// 是否需要去除日志（邮件、通知……）
	// 本地备份用于测试的时候不需要线上的日志。
	bool remove_logs = 2;

	// 客户端数据库版本号。如果服务器大于此版本号，会出错。
	int32 client_database_version = 3;
}

message BackupResponse {
	message Preparing {
		float progress = 1;
	}
	message Transferring {
		float progress = 1;
		bytes data = 2;
	}
	oneof BackupResponseMessage {
		Preparing preparing = 1;
		Transferring transferring = 2;
	}
}

message BackupFilesRequest {
	message SendFileRequest {
		int32 post_id = 1;
		string path = 2;
	}
	oneof BackupFilesMessage {
		SendFileRequest send_file = 2;
	}
}

message BackupFilesResponse {
	message SendFileResponse {
		bytes data = 1;
	}
	oneof BackupFilesMessage {
		SendFileResponse send_file = 2;
	}
}

message GetSyncConfigRequest {}

message GetSyncConfigResponse {
	string url = 1;
	string username = 2;
	string password = 3;

	string author = 10;
	string email = 11;
}
